--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="profile">
       <img class="myProfile" src="images/profile.png" alt="">
       <h2><strong>Hello.</strong></h2>
-      <p>I'm a full-stack web and android developer having more than 2 years experience working in highly well known companies, I'm not good only in building softwares
+      <p>I'm a full-stack web and android developer having more than 2 years experience working in well known companies, I'm not good only in building softwares
       but I also take part in different activities like badminton and acting, I ❤️ to travel and explore new things in life </p>
     </div>
     <hr >
